--- a/lesson4.html
+++ b/lesson4.html
@@ -16,9 +16,9 @@
     </div>
     <div class="menu">
       <a href="#">Головна</a>
-      <a href="index.2.html">Последние обновления</a>
-      <a href="index.3.html">Предсказания на обновления</a>
-      <a href="index.4.html">Про мене</a>
+      <a href="index2.html">Последние обновления</a>
+      <a href="index3.html">Предсказания на обновления</a>
+      <a href="index4.html">Про мене</a>
     </div>
     <div class="social-menu">
       <a href="https://www.instagram.com/_nazar_momot_/"></a>
